Fixed the navigation bar on iOS.
Couldn't blur the navbar on Safari.

--- a/home_style.css
+++ b/home_style.css
@@ -58,6 +58,7 @@ body {
 /* Unique to the home page. */
 nav {
     background-color: transparent;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     box-shadow: 1px 5px 10px black;
 }
