--- a/navigation/navbar.css
+++ b/navigation/navbar.css
@@ -13,6 +13,7 @@ nav {
     align-items: center;
     padding: 20px 20%;
     background-color: transparent;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     z-index: 4;
 }
